@@ -13,6 +13,8 @@ ActionController::Routing::Routes.draw do |map|
 
   map.resources :contas
 
+  map.resources :alugueis
+
   # The priority is based upon order of creation: first created -> highest priority.
 
   # Sample of regular route:
