@@ -1,4 +1,7 @@
 2009-05-25 Iuri Fernandes <iurifq@gmail.com>
+* Added skeleton of alugueis
+
+2009-05-25 Iuri Fernandes <iurifq@gmail.com>
 * Renamed some columns in createTables.sql
 * Created "aluguel" model
 
